# schedra

./: .gitignore  Cargo.toml  README.md  build.rs  example.sc
.github/workflows/: release.yaml  test.yaml
docs/: reference_guide.md
src/: bpf.rs  engine.rs  error.rs  main.rs  scheduler.rs
src/bpf/: bpf.rs  mod.rs
src/parser/: ast.rs  mod.rs  schedra.pest  test.rs
